# munch-storage-swift

./: .gitignore  .travis.yml  README.rst  setup.cfg  setup.py
munch_storage_swift/: __about__.py  __init__.py  apps.py
