[bumpversion]
current_version = 0.1.0
commit = True
tag = True
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:munch_storage_swift/__init__.py]

[metadata]
description-file = README.rst

[flake8]
filename = munch_storage_swift/*.py
exclude = tests

